--- a/Inventaire/Views/Inventaire_Produit/Index.cshtml
+++ b/Inventaire/Views/Inventaire_Produit/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Ajouter une référence", "Create")
 </p>
 @using (Html.BeginForm("Index", "Inventaire_Produit", FormMethod.Get))
 {
