--- a/Inventaire/Views/Inventaire_Produit/Index.cshtml
+++ b/Inventaire/Views/Inventaire_Produit/Index.cshtml
@@ -9,14 +9,52 @@
 <p>
     @Html.ActionLink("Ajouter une référence", "Create")
 </p>
+<style>
+    .filter-form {
+        background-color: #f7f7f7;
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        width: 300px;
+        margin: 20px auto;
+    }
+
+        .filter-form label {
+            display: inline-block;
+            margin-right: 10px;
+        }
+
+        .filter-form select, .filter-form input[type="text"] {
+            width: 150px;
+            height: 30px;
+            padding: 5px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            margin-right: 10px;
+        }
+
+        .filter-form input[type="submit"] {
+            background-color: #4CAF50;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            padding: 5px 10px;
+            cursor: pointer;
+        }
+
+            .filter-form input[type="submit"]:hover {
+                background-color: #3e8e41;
+            }
+</style>
 @using (Html.BeginForm("Index", "Inventaire_Produit", FormMethod.Get))
 {
-    <p>
-        Type: @Html.DropDownList("Types", "All")
-        Fabriquant: @Html.DropDownList("Fab", "All")
-        Référence: @Html.TextBox("SearchString")
-        <input type="submit" value="Filter" />
-    </p>
+<p class="filter-form">
+    Type: @Html.DropDownList("Types", "All")
+    Fabriquant: @Html.DropDownList("Fab", "All")
+    Référence: @Html.TextBox("SearchString")
+    <input type="submit" value="Filter" />
+</p>
 }
 <table class="table">
     <tr>
